Desinstalacion de AnimateCSS, creacion de animaciones y solucion de bug overflow

--- a/src/styles/_404.scss
+++ b/src/styles/_404.scss
@@ -1,35 +1,41 @@
+.error {
+	background-color: #0102aa;
+	height: 100vh;
+	position: absolute;
+	width: 100vw;
+	top: 0;
+	cursor: pointer;
+	animation: fadeIn 0.5s ease-in-out;
 
-.error{
-    background-color: #0102aa;
-    height: 100vh;
-    position: absolute;
-    width: 100vw;
-    top: 0;
-    cursor: pointer;
+	&__container {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-family: MS;
+		letter-spacing: 0.5rem;
+	}
 
-    &__container{
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-family: MS;
-        letter-spacing: .5rem;
-    }
+	&__title {
+		color: #d1dbdc;
+		font-size: 3rem;
+		font-weight: bold;
+		margin-bottom: 2rem;
+	}
+	&__paragraph {
+		color: #d1dbdc;
+		font-size: 1.5rem;
+		font-weight: bold;
+		margin-bottom: 1rem;
+	}
+}
 
-   
-
-    &__title{
-        color: #d1dbdc;
-        font-size: 3rem;
-        font-weight: bold;
-        margin-bottom: 2rem;
-    }
-    &__paragraph{
-        color: #d1dbdc;
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 1rem;
-    }
-
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
