--- a/src/styles/_background.scss
+++ b/src/styles/_background.scss
@@ -6,6 +6,7 @@
 
 body {
 	background-color: #008080;
+	overflow: hidden;
 }
 
 
