--- a/src/styles/_window.scss
+++ b/src/styles/_window.scss
@@ -6,7 +6,8 @@
 	top: 10%;
 	background-color: #c6c6c6;
 	display: inline;
-	transition: display 0.5s ease-in-out;
+	animation: open 1s ease-in-out;
+
 	&__top {
 		background-color: #000080;
 		width: 100%;
@@ -14,6 +15,7 @@
 		display: flex;
 		justify-content: space-between;
 		border: none;
+			overflow: hidden;
 		& > span {
 			color: #fff;
 			font-family: MS;
@@ -21,6 +23,7 @@
 			font-size: large;
 			letter-spacing: 0.09rem;
 			padding: 4px 10px;
+				overflow: hidden;
 		}
 
 		& > a {
@@ -29,6 +32,7 @@
 			margin: 5px;
 			cursor: pointer;
 			border-radius: 1px;
+				overflow: hidden;
 			&:focus{
 				background-color: darken($color: #c6c6c6, $amount: 10%);
 			}
@@ -99,6 +103,18 @@
 		margin: 1rem 3rem;
 		letter-spacing: 0.1rem;
 		font-size: large;
-		
+		white-space: pre-wrap;
+		text-align-last: center;
+	}
+}
+
+@keyframes open {
+	0% {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0%);
+		opacity: 1;
 	}
 }
